--- a/Ch3 (RESTful APIs)/package.json
+++ b/Ch3 (RESTful APIs)/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/M0hamedGamal/NodeJS-Mahara-Tech-Course#readme",
   "dependencies": {
+    "ajv": "^8.17.1",
     "express": "^5.2.1"
   }
 }
