--- a/Ch4 (Middlewares)/practices/package.json
+++ b/Ch4 (Middlewares)/practices/package.json
@@ -2,9 +2,9 @@
   "name": "nodejs-mahara-tech-course",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
