--- a/Ch8 (CRUD with MongoDb)/package.json
+++ b/Ch8 (CRUD with MongoDb)/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "ajv": "^8.17.1",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.2.1",
     "helmet": "^8.1.0",
     "mongoose": "^9.1.1"
